# adbwinapi

./: .gitignore  0001-adbwinusb-fix-build.patch  CMakeLists.txt  README.md  build.cmd
.github/workflows/: build.yml
